Fixed Spacing and Otherr Bugs

--- a/style.css
+++ b/style.css
@@ -713,6 +713,9 @@ input:where([type="text"], [type="email"], ) {
 .padding-block-700 {
   padding-block: var(--size-700);
 }
+.padding-block-500 {
+  padding-block: var(--size-500);
+}
 
 .margin-bottom-700 {
   margin-block-end: var(--size-700);
